--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -35,8 +35,10 @@ $app-direction: ltr;
 
 $colors: (
   colorWhite: #fff,
-  primary:    #488aff,
-  secondary:  #32db64,
+  //primary:    #488aff,
+  primary:    #fee610,
+  //secondary:  #32db64,
+  secondary:  #fe3233, 
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
