--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,55 @@
-page-home {
+.ios, .md {
+  page-home {
+        .fadeOut {
+            transition: all 0.5s linear;
+            opacity: 0;
+        }
 
+        .fadeIn {
+            transition: all 0.5s linear;
+            opacity: 1;
+        }
+
+        @-webkit-keyframes slideSmall {
+            0% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(2);
+                transform: rotate(30deg);
+                color: red;
+            }
+            75% {
+                transform: rotate(-30deg);
+            }
+
+            100% {
+                transform: scale(0.1);
+            }
+        }
+
+        @-webkit-keyframes slideBig {
+            0% {
+                transform: scale(0.1);
+            }
+            50% {
+                transform: scale(2);
+            }
+            100% {
+                transform: scale(1);
+            }
+        }
+
+        .slide-small {
+            animation-name: slideSmall;
+            animation-duration: .9s;
+            // animation-iteration-count: infinite;
+            transform: scale(0.1);
+        }
+
+        .slide-big {
+            animation-name: slideBig;
+            animation-duration: .9s;
+        }
+    }
 }
