--- a/src/components/dishes-modal/dishes-modal.html
+++ b/src/components/dishes-modal/dishes-modal.html
@@ -1,20 +1,20 @@
 <ion-header>
     <ion-navbar color="primary">
       <img alt="logo" src="../assets/imgs/main-logo.png" style="width:50%"/>
+      <ion-icon (click)="closeMenuModal()" name="checkmark" item-right></ion-icon>
+  
     </ion-navbar>
   </ion-header>
   
 <ion-content scrollbar-y-auto>
   
-   
     <ion-card *ngFor="let dish of dishes; let idx = index" class="block">
         <ion-title *ngIf="showDish" (click)="openInputField(dish)">{{ dish }}</ion-title>
         <ion-item *ngIf="showInput" class="item item-trns">
-            <!-- <ion-input (ionChange)="showingInput(dishes[idx].value)" [(ngModel)]="dishes[idx].value" placeholder="{{dish}}" clearInput></ion-input>  -->
-            <ion-input (ionChange)="addDish(dish)" [(ngModel)]="enteredDish" placeholder="{{dish}}" clearInput></ion-input> 
-            <ion-icon *ngIf="showCheckmark" name="checkmark" item-right></ion-icon>
+            <!-- <ion-input (ionChange)="addDish(dish))" [(ngModel)]="dishes[idx].value" placeholder="{{dish}}" clearInput></ion-input>  -->
+            <ion-input (ionChange)="checkInput($event)" [(ngModel)]="enteredDish" placeholder="{{dish}}" clearInput></ion-input> 
+            <ion-icon *ngIf="showCheckmark" (click)="addDish(dish)" name="checkmark" item-right></ion-icon>
         </ion-item>
       </ion-card> 
-      
-  
+    
 </ion-content>
