--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -15,5 +15,9 @@
         .intro {
             padding-top: 5vh; 
         }
+
+        ion-icon {
+            font-size: bold; 
+        }
     }
 }
