--- a/src/components/dishes-modal/dishes-modal.scss
+++ b/src/components/dishes-modal/dishes-modal.scss
@@ -11,6 +11,11 @@
             background-color: #fe3233;
             padding: 5%;
           }
+
+          .disabled-block {
+            background-color: #ce533e88;
+            padding: 5%;
+          }
           
           ion-card {
             position: relative;
