--- a/src/components/dishes-modal/dishes-modal.scss
+++ b/src/components/dishes-modal/dishes-modal.scss
@@ -13,7 +13,7 @@
           }
 
           .disabled-block {
-            background-color: #ce533e88;
+            background-color: blue;
             padding: 5%;
           }
           
