Updated dishes pipeline

--- a/src/components/dishes-modal/dishes-modal.html
+++ b/src/components/dishes-modal/dishes-modal.html
@@ -11,6 +11,12 @@
   </ion-header>
   
 <ion-content scrollbar-y-auto>
+
+  <ion-refresher (ionRefresh)="doRefresh($event)">
+      <ion-refresher-content  pullingText="Update dishes ..."></ion-refresher-content>
+  </ion-refresher>
+
+      
   <p *ngIf="showNoDishesWarning" class="error">Oh dear .. something went wrong collecting the dishes! Please come back later.</p>
   <ion-card [ngClass]="{'disabled-block':dish.active === false, 'block':dish.active === true }" *ngFor="let dish of dishes; let idx = index">
     <ion-title *ngIf="showDish" (click)="openInputField(dish)">{{dish.name}}</ion-title>
