--- a/src/components/dishes-modal/dishes-modal.scss
+++ b/src/components/dishes-modal/dishes-modal.scss
@@ -12,6 +12,10 @@
 
           }
 
+          .center {
+              text-align: center;
+          }
+
           .block {
             background-color: #fe3233;
             padding: 5%;
