--- a/src/components/wheel/wheel.html
+++ b/src/components/wheel/wheel.html
@@ -1,4 +1,5 @@
-<!-- Generated template for the WheelComponent component -->
 <div>
-  {{text}}
-</div>
+    <p>This should be shown right?</p>
+  </div>
+
+
