--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -19,4 +19,6 @@
 [scrollbar-y-auto] .scroll-content {
     overflow-y: auto !important;
   }
+
+.scroll-content { padding-bottom: 0!important; }
   
