--- a/src/components/dishes-modal/dishes-modal.html
+++ b/src/components/dishes-modal/dishes-modal.html
@@ -4,17 +4,19 @@
     </ion-navbar>
   </ion-header>
   
-<ion-content scrollbar-y-auto>
+<ion-content scroll="true">
 
   <p padding *ngIf="showNoDishesWarning" class="error">Oh dear .. something went wrong while collecting the dishes! Please try again.</p>
-  <ion-card [ngClass]="{'disabled-block':dish.active === false, 'block':dish.active === true }" *ngFor="let dish of dishes; let idx = index">
-    <ion-title (click)="openInputField(idx)" *ngIf="highLighted !== idx">{{dish.name}}</ion-title>
-    <ion-item *ngIf="highLighted === idx" class="item item-trns"> 
-        <ion-input (ionChange)="checkInput($event, dish)" [(ngModel)]="enteredDish" placeholder="{{dish.name}}" clearInput></ion-input> 
-        <ion-icon *ngIf="showCheckmark" (click)="addDish(dish)" name="checkmark" item-right></ion-icon>
-    </ion-item>
-  </ion-card> 
-
+  <form *ngFor="let dish of dishes; let idx = index" [formGroup]="form" (ngSubmit)="addDish(form, dish)">
+    <ion-card [ngClass]="{'disabled-block':dish.active === false, 'block':dish.active === true }"> 
+      <ion-title (click)="openInputField(idx)" *ngIf="highLighted !== idx">{{ dish.name }}</ion-title>
+      <ion-item *ngIf="highLighted === idx" class="item item-trns">
+        <ion-input (ionChange)="checkInput(form, dish)" type="text" placeholder="{{dish.name}}" formControlName="dishName" clearInput></ion-input>
+        <ion-icon *ngIf="showCheckmark" name="checkmark" item-right></ion-icon>
+      </ion-item>
+    </ion-card>
+  </form>
+  
   <div class="center">
       <button padding-left ion-button (click)="closeMenuModal()">Go back</button>
   </div>
