--- a/src/components/wheel/wheel.html
+++ b/src/components/wheel/wheel.html
@@ -1,5 +1,6 @@
-<div>
-    <p>This should be shown right?</p>
-  </div>
-
-
+<img alt="logo" src="../assets/imgs/main-logo.png" style="width:50%"/>
+<ion-row>
+    <ion-col>
+        <p text-center>NOW THE WHEEL WILL START TO SPIN</p> 
+    </ion-col>
+</ion-row>
