--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,23 +1,10 @@
 .ios, .md {
   page-home {
-         
-        img {
+        ion-slides {
             display: block;
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        .big {
-            font-size: 1.7rem;
-            font-weight: 700; 
-        }
-
-        .intro {
-            padding-top: 5vh; 
-        }
-
-        ion-icon {
-            font-size: bold; 
+            width: 100%;
+            height: 100%; 
+            background: #fee610;
         }
     }
 }
