--- a/src/components/wheel/wheel.html
+++ b/src/components/wheel/wheel.html
@@ -1,4 +1,4 @@
-<img alt="logo" src="../assets/imgs/main-logo.png" style="width:50%"/>
+<img alt="logo" src="../assets/imgs/makanapa-wheel.png" style="width:60%"/>
 <ion-row>
     <ion-col>
         <p text-center>NOW THE WHEEL WILL START TO SPIN</p> 
