--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -6,5 +6,9 @@
             height: 100%; 
             background: #fee610;
         }
+
+        p {
+            font-size: 1.5rem; 
+        }
     }
 }
