--- a/src/components/dishes-form/dishes-form.html
+++ b/src/components/dishes-form/dishes-form.html
@@ -9,7 +9,7 @@
   </ion-card>
 </form>
 
-<button class="center" (click)="resetForm()" ion-button icon-start>
+<!-- <button class="center" (click)="resetForm()" ion-button icon-start>
   Delete dishes
   <ion-icon padding-left name="trash"></ion-icon>
-</button>
+</button> -->
