--- a/src/pages/welcome-splash/welcome-splash.scss
+++ b/src/pages/welcome-splash/welcome-splash.scss
@@ -1,5 +1,5 @@
-.ios, .md {
-    page-welcome {
+.ios, .md { 
+    page-welcome-splash {
         ion-content {
             background: color($colors, primary);
         }
@@ -14,6 +14,5 @@
             margin-right: auto;
             margin-top: 20vh;
         }
-
     }
 }
