--- a/src/components/dishes-form/dishes-form.scss
+++ b/src/components/dishes-form/dishes-form.scss
@@ -7,9 +7,9 @@
               margin-right: auto;
           }
 
-          .error {
-              color: red;
-
+          .error p {
+            color: red;
+            font-size: 1.6rem; 
           }
 
           .center {
