--- a/src/components/wheel/wheel.html
+++ b/src/components/wheel/wheel.html
@@ -1,6 +1,6 @@
 <img alt="logo" src="../assets/imgs/makanapa-wheel.png" style="width:60%"/>
 <ion-row>
     <ion-col>
-        <p text-center>NOW THE WHEEL WILL START TO SPIN</p> 
+        <p text-center>{{ selectedDish }}</p> 
     </ion-col>
 </ion-row>
